--- a/app/src/main/res/menu/act2menu.xml
+++ b/app/src/main/res/menu/act2menu.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/item1"
+        android:id="@+id/logout"
         android:title="Logout"
 
         />
 
     <item
-        android:id="@+id/item2"
-        android:title="Add Node"
+        android:id="@+id/addnote"
+        android:title="Add Note"
         />
 
 </menu>
